Fixed extra vertical scrollbar appearing
A vertical scrollbar was appearing along with the one in the iframe
component which was unnecessary. This commit removes it.

Fixes #566.

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -23,7 +23,7 @@
 [role=region] {
     top: 0;
     right: 0;
-    bottom: 0;
+    bottom: -3px;
     left: 0;
     position: fixed;
     overflow-x: hidden;
